# grpc-address-book

./: .env.sample  Cargo.toml  README.md  build.rs  sqlx-data.json
migrations/: 20210520101751_create_people.sql
proto/address-book/: address-book.proto
src/: lib.rs
